--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 	</header>
 	<nav>
 		<ul>
-			<li><a href="#">Home</a></li>
+			<li><a href="sent.html">Home</a></li>
 			<li><a href="#">About</a></li>
-			<li><a href="#">Contact</a></li>
+			<li><a href="sent.html">Contact</a></li>
 		</ul>
 	</nav>
 	<main>
